<resources>
    <string name="GOOGLE_API_KEY">AIzaSyBMlbzORVrQPz4cX9QV4RUeM4vBs4EKISw</string>
    <string name="app_name">GoLocal</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account_signup">Don\'t have an account?\nRegister Here</string>
    <string name="already_account_login">Already have an account?\nLogin Here</string>
    <string name="customer_description">I am looking to buy a coffee</string>


    <!-- Strings related to navigation drawer -->
    <string name="fragment_profile">Profile</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_current_order">Current Order</string>
    <string name="fragment_history">History</string>
    <string name="fragment_rewards">Rewards</string>
    <string name="fragment_payment">Payment</string>
    <string name="fragment_settings">Settings</string>
    <!-- Other fragments -->
    <string name="fragment_shop_details">Shop Details</string>
    <string name="fragment_item_details">Item Details</string>
    <string name="fragment_confirm_order">Confirm Order</string>
    <string name="fragment_placed_order">Placed Order</string>
    <string name="fragment_order_details">Order Details</string>

    <!-- Menu Strings -->
    <string name="search_menu">Search for a location</string>
    <string name="share_menu">Share this shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Intent Keys -->
    <string name="intent_message">intent_message</string>

    <!-- Prompts -->
    <string name="requests">Requests</string>
    <string name="prompt_customization">Enter your requests</string>

    <!-- Errors -->
    <string name="item_not_belong_shop">You must submit your order before adding this item.</string>

    <!-- Titles -->
    <string name="favorites">Favorites</string>
    <string name="photos">Photos</string>
    <string name="your_order">Your Order</string>
    <string name="total">Total</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'GoLocal\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

    <!-- Cart -->
    <string name="added_to_cart">Added to cart</string>
    <string name="cannot_add_to_cart">The item you added does not belong to the same shop as your other items</string>
    <!-- Confirm Order -->
    <string name="tax">Tax</string>
    <!-- Paid Order -->
    <string name="thanks_for_order">Thank you for your order!</string>
    <string name="please_visit">Pick up your order at</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date">Order date:</string>
    <string name="status">Status:</string>
    <string name="completed_order">Completed</string>
    <string name="incomplete_order">Processing</string>
    <string name="shop">Shop:</string>
    <string name="continue_to_orders">All Orders</string>
    <string name="ordered_items">Items:</string>

</resources>
