<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/PaddedRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/order_paid_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/layout_order_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Header2"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_right_image"
            android:layout_marginLeft="@dimen/margin_right_image"
            style="@style/AppTheme.Header"
            android:text="@string/incomplete_order"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Header2"
            android:text="@string/shop"/>

        <TextView
            android:id="@+id/order_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_right_image"
            android:layout_marginLeft="@dimen/margin_right_image"
            style="@style/AppTheme.Header"/>

    </LinearLayout>

</LinearLayout>