<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/PaddedRelativeLayout"
    tools:context="yau.celine.golocal.RegisterActivity">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:elevation="@dimen/small_elevation"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/big_elevation"
            android:indeterminate="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/editText_register_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/prompt_fullname"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editText_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_register_fullname"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editText_register_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/editText_register_username"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/editText_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/editText_register_password1"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"/>

        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_below="@+id/editText_register_password2">
            <RadioButton
                android:id="@+id/radioButtonCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/customer_description"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/radioType"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_activity_register"
            style="@style/Widget.AppCompat.Button.Colored" />
        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_account_login"
            android:textAlignment="center"
            android:layout_below="@+id/button_register_register"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

</RelativeLayout>
