<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PaddedRelativeLayout">

    <LinearLayout
        android:id="@+id/thanks_wrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:tint="@color/lightBrown"
                android:src="@drawable/ic_favorite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_image"
                android:text="@string/thanks_for_order"
                style="@style/AppTheme.Title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Body"
                android:text="@string/please_visit"/>

            <TextView
                android:id="@+id/order_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Body"
                tools:text=" Shop Name"/>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thanks_wrapper"
        layout="@layout/layout_order_paid_detail"/>

    <Button
        android:id="@+id/continue_to_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_details"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/continue_to_orders"/>

</RelativeLayout>